# vlm-interp

./: .gitignore  README.md  hello.py  pyproject.toml  repo_setup.py  requirements.txt
data/processed/: image_to_f1_logit_50_mask_10000.json
docs/: thoughts.md
experiments/notebooks/: coco_exploration.ipynb  conv2d_viz.ipynb  llava-sugarcrepe.ipynb  llava_attn_map.ipynb  llava_logit_lens.ipynb  mlx_inference.ipynb  molmo.ipynb  qwen-sugarcrepe.ipynb  qwen_logit_lens.ipynb  sugarcrepe.ipynb  vlm_inference.ipynb
experiments/notebooks/coco/: coco_exploration.ipynb
experiments/notebooks/diffusion/: diffusers.ipynb
experiments/notebooks/llava/: llava-sugarcrepe.ipynb  llava_attn_map.ipynb  llava_logit_lens.ipynb
experiments/notebooks/qwen/: qwen_sugarcrepe.ipynb  qwen_tokens_to_image.ipynb
reports/: evals.md
src/: data_utils.py  lens_utils.py  llava-sugarcrepe.ipynb  llava_logit_lens_loc_demo.ipynb  llava_logit_lens_loc_demo.py  llava_sugarcrepe_logit_lens_loc_demo.ipynb  llava_sugarcrepe_logit_lens_loc_demo.py  llava_sugarcrepe_logit_lens_loc_eval.ipynb  llava_sugarcrepe_logit_lens_loc_eval.py  llava_utils.py  utils.py
