[project]
name = "vlm-compositionality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "bitsandbytes>=0.45.0",
    "datasets>=3.2.0",
    "flash-attn>=2.7.2.post1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pyqt6>=6.8.0",
    "qwen-vl-utils>=0.0.8",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.1",
    "ultralytics>=8.3.55",
]
