[project]
name = "vlm-compositionality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "datasets>=3.2.0",
    "huggingface-hub>=0.28.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=1.26.4",
    "pycocotools>=2.0.8",
    "pyqt6>=6.8.0",
    "qwen-vl-utils>=0.0.8",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.1",
    "ultralytics>=8.3.55",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
